# cookiecutter-kicad

./: .gitattributes  .gitignore  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: ci-changelog.yml  publish-docs.yml  release.yml
authors/: index.html
changelog/: index.html
contributing/: index.html
docs/: authors.md  changelog.md  contributors.md  index.md  license.md  readme.md
docs/getting-started/: documentation.md  github.md  new-project.md  (+2 more)
hooks/: post_gen_project.py
kicad6/: {{cookiecutter.project_name}}.kicad_pcb  {{cookiecutter.project_name}}.kicad_sch
license/: index.html
search/: search_index.json
tests/: demo-site.yml
{{cookiecutter.project_name}}/: .gitignore  .gitlab-ci.yml  AUTHORS.rst  LICENSE  Makefile  README.md  mkdocs.yml  pipfile  pyproject.toml  {{cookiecutter.project_name}}.pro  {{cookiecutter.project_name}}.sch
{{cookiecutter.project_name}}/.github/: pull_request_template.md
{{cookiecutter.project_name}}/.github/workflows/: ci-changelog.yml  kibot_gen_full_outputs.yaml  kibot_gen_review_gerbers.yaml  kibot_gen_schematic_outputs.yaml  publish-docs.yml  release.yml
{{cookiecutter.project_name}}/docs/: contributors.md  github.md  index.md
{{cookiecutter.project_name}}/docs/checklists/: kicad_jlpcb.md  kicad_pcb.md  kicad_schematic.md  sample2.md
{{cookiecutter.project_name}}/docs/firmware/: overview.md
{{cookiecutter.project_name}}/docs/hardware/: overview.md
{{cookiecutter.project_name}}/kicad5/: {{cookiecutter.project_name}}.kicad_pcb  {{cookiecutter.project_name}}.sch
{{cookiecutter.project_name}}/kicad5/.kibot/: gerber_outputs.kibot.yaml
{{cookiecutter.project_name}}/kicad5/.kibot/includes/pcb/: Eurocircuits_position.kibot.yaml  JLCPCB_position.kibot.yaml
{{cookiecutter.project_name}}/kicad5/.kibot/includes/schematic/: documentation.kibot.yaml
{{cookiecutter.project_name}}/kicad6/: {{cookiecutter.project_name}}.kicad_pcb  {{cookiecutter.project_name}}.kicad_pro  {{cookiecutter.project_name}}.kicad_sch
{{cookiecutter.project_name}}/kicad6/.kibot/: full_outputs.kibot.yaml  schematic_outputs.kibot.yaml
{{cookiecutter.project_name}}/kicad6/.kibot/includes/pcb/: Eurocircuits_fab_stencil.kibot.yaml  JLCPCB_fab_stencil.kibot.yaml  documentation.kibot.yaml  generic_gerbers.kibot.yaml
{{cookiecutter.project_name}}/kicad8/: {{cookiecutter.project_name}}.kicad_pcb  {{cookiecutter.project_name}}.kicad_prl  {{cookiecutter.project_name}}.kicad_pro  {{cookiecutter.project_name}}.kicad_sch
{{cookiecutter.project_name}}/kicad_pcb/: {{cookiecutter.project_name}}.kicad_pcb
(+5 files in other folders)
