[tool.poetry]
name = "cookiecutter-kicad"
version = "2022.06.26"
description = "Cookiecutter KiCad generates boilerplate for production-ready KiCad projects."
authors = ["Stephen Eaton <seaton@strobotics.com.au>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8"
mkdocs-mermaid2-plugin = "^0.5"
mkdocs-macros-plugin = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
