[tool.poetry]
name = "cookiecutter-kicad"
version = "2025.1.4"
description = "Cookiecutter KiCad generates boilerplate for production-ready KiCad projects."
authors = ["Stephen Eaton <seaton@strobotics.com.au>"]
license = "GPL-3.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9"
mkdocs-mermaid2-plugin = "^1.1"
mkdocs-macros-plugin = "^1.3"

[tool.poetry.dev-dependencies]
pytest-cookies = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
