[tool.poetry]
name = "{{cookiecutter.project_repo_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}}"]
license = "{{cookiecutter.license}}"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8"
mkdocs-mermaid2-plugin = "^0.5"
mkdocs-macros-plugin = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
