[tool.poetry]
name = "{{cookiecutter.project_repo_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.author_name}}"]
license = "{{cookiecutter.license}}"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9"
mkdocs-mermaid2-plugin = "^1.1"
mkdocs-macros-plugin = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
